// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`branchesReducer branchesReducer appends a new branch to state on action ADD_BRANCH 1`] = `
Object {
  "603": Object {
    "id": "603",
    "location": "local",
    "name": "testBranch",
    "repo": "23",
    "status": "unmodified",
    "updated": "2020-01-14T09:14:33.790-08:00",
  },
  "805": Object {
    "id": "805",
    "location": "remote",
    "name": "bugfix/crashlog",
    "repo": "23",
    "status": "unmodified",
    "updated": "2020-07-02T13:49:52.017-07:00",
  },
  "991": Object {
    "id": "991",
    "location": "remote-only",
    "name": "production",
    "repo": "17",
    "status": "added",
    "updated": "2020-06-30T20:04:09.112-07:00",
  },
}
`;

exports[`branchesReducer branchesReducer removes branches from state on action REMOVE_REPO 1`] = `
Object {
  "603": Object {
    "id": "603",
    "location": "local",
    "name": "testBranch",
    "repo": "23",
    "status": "unmodified",
    "updated": "2020-01-14T09:14:33.790-08:00",
  },
}
`;

exports[`branchesReducer branchesReducer returns default state when current state is blank 1`] = `
Object {
  "805": Object {
    "id": "805",
    "location": "remote",
    "name": "bugfix/crashlog",
    "repo": "23",
    "status": "unmodified",
    "updated": "2020-07-02T13:49:52.017-07:00",
  },
}
`;

exports[`branchesReducer branchesReducer updates state of matched branch on action UPDATE_BRANCH 1`] = `
Object {
  "603": Object {
    "id": "603",
    "location": "local-only",
    "name": "testBranch",
    "repo": "23",
    "status": "unmodified",
    "updated": "2020-01-14T09:14:33.790-08:00",
  },
  "991": Object {
    "id": "991",
    "location": "remote-only",
    "name": "production",
    "repo": "17",
    "status": "added",
    "updated": "2020-06-30T20:04:09.112-07:00",
  },
}
`;
